Update and rename index33.html to index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<title>2レーン音ゲー（スマホ対応修正版）</title>
+<title>龍踊囃子太鼓</title>
 <style>
 body { margin:0; background:#111; color:white; font-family:sans-serif; overflow:hidden; }
 canvas { display:block; background:black; touch-action:none; }
