--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ body { margin:0; background:#111; color:white; font-family:sans-serif; overflow:
 canvas { display:block; background:black; touch-action:none; }
 #ui { position:absolute; top:0; left:0; width:100%; height:100%; display:flex;
       justify-content:center; align-items:center; flex-direction:column; }
+#ui.playing { pointer-events: none; } /* ゲーム中はUIがタッチを奪わない */
 button { font-size:8vw; padding:2vh 5vw; margin:2vh; cursor:pointer; }
 </style>
 </head>
@@ -71,6 +72,7 @@ function parseChartTiming(jsonChart){
 
 function showStartScreen(){
     gameState="start"; ui.innerHTML="";
+    ui.classList.remove('playing'); // UIを操作可能に戻す
     notes = chart.map(n=>({...n, hit:false}));
 
     const btn = document.createElement('button');
@@ -85,6 +87,7 @@ function showStartScreen(){
 function startCountdown(){
     gameState="countdown"; ui.innerHTML="";
     currentCountdown=3;
+    ui.classList.remove('playing');
     const interval = setInterval(()=>{
         currentCountdown--;
         if(currentCountdown<=0){
@@ -111,11 +114,28 @@ function startGame(){
     gameState="playing";
     score=0; combo=0; currentHitText=null;
     hitCounts={PERFECT:0,GOOD:0,MISS:0};
+    ui.classList.add('playing'); // ゲーム中はUIを無効化
+}
+
+// 判定
+function judge(lane){
+    if(!notes.length || !startTime || gameState!=="playing") return;
+    const now = audioCtx.currentTime - startTime;
+    for(let note of notes){
+        if(!note.hit && note.lane===lane){
+            const diff = now - note.startTime;
+            if(Math.abs(diff)<=hitRangePerfectSec){ note.hit=true; score+=100; combo++; showHitText("PERFECT"); return; }
+            else if(Math.abs(diff)<=hitRangeGoodSec){ note.hit=true; score+=50; combo++; showHitText("GOOD"); return; }
+        }
+    }
+    combo=0; showHitText("MISS");
 }
 
 function showResultScreen(){
     if(bgmSource) bgmSource.stop();
-    gameState="result"; ui.innerHTML="";
+    gameState="result";
+    ui.classList.remove('playing'); // UIを操作可能に戻す
+    ui.innerHTML="";
 
     const div=document.createElement('div');
     div.style.fontSize='6vw';
@@ -137,6 +157,7 @@ function showResultScreen(){
     ui.appendChild(retryBtn);
 }
 
+// ノーツ描画
 function drawBackground(){
     ctx.strokeStyle="white";
     ctx.beginPath(); ctx.moveTo(laneWidth,0); ctx.lineTo(laneWidth,canvas.height); ctx.stroke();
@@ -155,48 +176,28 @@ function showHitText(text){
     });
 }
 
-function judge(lane){
-    if(!notes.length || !startTime || gameState!=="playing") return;
-    const now = audioCtx.currentTime - startTime;
-    for(let note of notes){
-        if(!note.hit && note.lane===lane){
-            const diff = now - note.startTime;
-            if(Math.abs(diff)<=hitRangePerfectSec){ note.hit=true; score+=100; combo++; showHitText("PERFECT"); return; }
-            else if(Math.abs(diff)<=hitRangeGoodSec){ note.hit=true; score+=50; combo++; showHitText("GOOD"); return; }
-        }
-    }
-    combo=0; showHitText("MISS");
-}
-
 // キーボード対応
 document.addEventListener("keydown",e=>{
     if(e.key=="f"||e.key=="F") judge(0);
     if(e.key=="j"||e.key=="J") judge(1);
 });
 
-// タップ/クリック操作（レーン上ならどこでも判定）
-function handleTap(x){
+// タッチ/クリック操作
+function handleTap(clientX){
     const rect = canvas.getBoundingClientRect();
-    const scaleX = canvas.width/rect.width;
-    const posX = (x - rect.left) * scaleX;
-    const lane = posX < laneWidth ? 0 : 1;
+    const scaleX = canvas.width / rect.width;
+    const x = (clientX - rect.left) * scaleX;
+    const lane = x < laneWidth ? 0 : 1;
     judge(lane);
 }
 
-// スマホ/PC両対応イベント
-function tapHandler(e){
+// pointerdownでスマホ/PC両対応
+document.addEventListener("pointerdown", e=>{
     if(gameState!=="playing") return;
-    let clientX=null;
-    if(e.touches && e.touches.length>0) clientX=e.touches[0].clientX;
-    else clientX=e.clientX;
-    if(clientX!=null) handleTap(clientX);
-    e.preventDefault();
-}
+    handleTap(e.clientX);
+});
 
-canvas.addEventListener("pointerdown", tapHandler, {passive:false});
-canvas.addEventListener("touchstart", tapHandler, {passive:false});
-canvas.addEventListener("mousedown", tapHandler);
-
+// ゲームループ
 function update(){
     ctx.clearRect(0,0,canvas.width,canvas.height);
     drawBackground();
